kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: frontend
        image: eu.gcr.io/dvotm-project/frontend:latest
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front
  name: frontend-lb
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  ports:
  - name: http-port
    port: 30000
    protocol: TCP
    targetPort: http
  selector:
    app: front
  type: LoadBalancer
