kubernetes/micro-ratings.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-ratings-deployment
  labels:
    app: micro-ratings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-ratings
  template:
    metadata:
      labels:
        app: micro-ratings
    spec:
      containers:
      - name: api
        image: eu.gcr.io/dvotm-project/micro-ratings:1.1.5
        ports:
        - containerPort: 8080
          name: port-api
---
apiVersion: v1
kind: Service
metadata:
  name: micro-ratings
  labels:
    app: micro-ratings
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: port-api
  selector:
    app: micro-ratings
  type: ClusterIP
